extracts methods for jooq queries for Node implementations